Add repo settings and remove highlights for Kilo
We've deprecated per-release highlights and are now removing them.
We also now require repository-settings for deliverables. This adds
the one and removes the other.

Change-Id: Ic40ddabba4637f888b1e4bd521246fcbdbf343fa

--- a/deliverables/kilo/ceilometer.yaml
+++ b/deliverables/kilo/ceilometer.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/ceilometer
         hash: b4d95afe92834ca8148210272d32a6676f97298c
+repository-settings:
+  openstack/ceilometer: {}
