--- a/deliverables/kilo/ceilometermiddleware.yaml
+++ b/deliverables/kilo/ceilometermiddleware.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/ceilometermiddleware
         hash: 55a829c1cda58a4ea280a0d88cfaa7ff207c0eab
+repository-settings:
+  openstack/ceilometermiddleware: {}
