--- a/deliverables/kilo/cinder.yaml
+++ b/deliverables/kilo/cinder.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/cinder
         hash: 15ecdf5814f3b5c2963e46ed9e499608b35e9166
+repository-settings:
+  openstack/cinder: {}
