--- a/deliverables/kilo/debtcollector.yaml
+++ b/deliverables/kilo/debtcollector.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/debtcollector
         hash: f3ea4d40c5e4e89adcbe06aa3133f38eef262563
+repository-settings:
+  openstack/debtcollector: {}
