--- a/deliverables/kilo/django-openstack-auth.yaml
+++ b/deliverables/kilo/django-openstack-auth.yaml
@@ -14,3 +14,5 @@ releases:
     projects:
       - repo: openstack/django_openstack_auth
         hash: 9bf38c85e4850e8e35d0d3eb6e2e7a2490c7c177
+repository-settings:
+  openstack/django_openstack_auth: {}
