--- a/deliverables/kilo/glance-store.yaml
+++ b/deliverables/kilo/glance-store.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/glance_store
         hash: ea88e503b617a7ac9a0ae7e537d6517e9992a104
+repository-settings:
+  openstack/glance_store: {}
