--- a/deliverables/kilo/glance.yaml
+++ b/deliverables/kilo/glance.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/glance
         hash: ca370edd28fe563b77c29123c940c7264897fc27
+repository-settings:
+  openstack/glance: {}
