--- a/deliverables/kilo/heat.yaml
+++ b/deliverables/kilo/heat.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/heat
         hash: 6dde95a0b3d2468e916a834fdc2ecf332d048c2a
+repository-settings:
+  openstack/heat: {}
