--- a/deliverables/kilo/horizon.yaml
+++ b/deliverables/kilo/horizon.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: ced6c32e0a331dbd32f73642d3a7d8dea7c3256f
+repository-settings:
+  openstack/horizon: {}
