--- a/deliverables/kilo/ironic.yaml
+++ b/deliverables/kilo/ironic.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/ironic
         hash: a9a8906ebd700c9d13f7e7f0045b8c74d554757e
+repository-settings:
+  openstack/ironic: {}
