--- a/deliverables/kilo/keystone.yaml
+++ b/deliverables/kilo/keystone.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/keystone
         hash: a0a57adf6f659d4dc1edd0447f35473d73b8cfcd
+repository-settings:
+  openstack/keystone: {}
