--- a/deliverables/kilo/keystonemiddleware.yaml
+++ b/deliverables/kilo/keystonemiddleware.yaml
@@ -20,5 +20,5 @@ releases:
     projects:
       - repo: openstack/keystonemiddleware
         hash: d56d96c8d33556e35ca2abffed689753ee0be740
-    highlights: >
-        will now require python-requests<2.8.0
+repository-settings:
+  openstack/keystonemiddleware: {}
