--- a/deliverables/kilo/manila-ui.yaml
+++ b/deliverables/kilo/manila-ui.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/manila-ui
         hash: 1ae0609b4cb0fdc4497175b05c1370edff05a42c
+repository-settings:
+  openstack/manila-ui: {}
