--- a/deliverables/kilo/murano-agent.yaml
+++ b/deliverables/kilo/murano-agent.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/murano-agent
         hash: 75e7e046950464a9dfc1afafeb86fc0b1afe6ce2
+repository-settings:
+  openstack/murano-agent: {}
