--- a/deliverables/kilo/murano-dashboard.yaml
+++ b/deliverables/kilo/murano-dashboard.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/murano-dashboard
         hash: b126c5e5c1b83e21bcbb1782cf0b1c3460abac7e
+repository-settings:
+  openstack/murano-dashboard: {}
