--- a/deliverables/kilo/murano.yaml
+++ b/deliverables/kilo/murano.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/murano
         hash: cafdcb9d481c71e2d6abe512f2ff5ed19e797d50
+repository-settings:
+  openstack/murano: {}
