--- a/deliverables/kilo/neutron.yaml
+++ b/deliverables/kilo/neutron.yaml
@@ -48,3 +48,8 @@ releases:
         hash: 363eeb06104662ee38aeed04af043899379f6ab8
       - repo: openstack/neutron-lbaas
         hash: 52ad675d92d5cae86beb5d1bd29d9852115fa455
+repository-settings:
+  openstack/neutron: {}
+  openstack/neutron-fwaas: {}
+  openstack/neutron-lbaas: {}
+  openstack/neutron-vpnaas: {}
