--- a/deliverables/kilo/nova.yaml
+++ b/deliverables/kilo/nova.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/nova
         hash: cd81512f87476b0bad29db379d3b92b22723cd2e
+repository-settings:
+  openstack/nova: {}
