--- a/deliverables/kilo/openstack-doc-tools.yaml
+++ b/deliverables/kilo/openstack-doc-tools.yaml
@@ -3,7 +3,7 @@ launchpad: openstack-doc-tools
 team: Documentation
 type: library
 releases:
-  - version: '0.21'
+  - version: "0.21"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 987748f89df9e77a837b77bd142f06e8ad395d6e
@@ -11,19 +11,21 @@ releases:
     projects:
       - repo: openstack/openstack-doc-tools
         hash: e77e51365b563fefd7a0eb6a15b6bcf79160e755
-  - version: '0.22'
+  - version: "0.22"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: ec79ad567275c6ce663e45ecf5c295318b1fa4b6
-  - version: '0.23'
+  - version: "0.23"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 658f29cc2e84abc7d4d6fe3e34eaed43555562ef
-  - version: '0.24'
+  - version: "0.24"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 66843e24409c528f09ba51fdb0d833d749c7b9ba
-  - version: '0.25'
+  - version: "0.25"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: feba2086be3d8cd9280f5181a4bac4341413936f
+repository-settings:
+  openstack/openstack-doc-tools: {}
