--- a/deliverables/kilo/openstackdocstheme.yaml
+++ b/deliverables/kilo/openstackdocstheme.yaml
@@ -3,7 +3,7 @@ launchpad: openstackdocstheme
 team: Documentation
 type: library
 releases:
-  - version: '1.0'
+  - version: "1.0"
     projects:
       - repo: openstack/openstackdocstheme
         hash: 63ed912e102320f23f7fddb0705814b23f8f5e9a
@@ -35,3 +35,5 @@ releases:
     projects:
       - repo: openstack/openstackdocstheme
         hash: 626c47ba98b8db40fda76571f9b24386b3375502
+repository-settings:
+  openstack/openstackdocstheme: {}
