--- a/deliverables/kilo/os-client-config.yaml
+++ b/deliverables/kilo/os-client-config.yaml
@@ -40,3 +40,5 @@ releases:
     projects:
       - repo: openstack/os-client-config
         hash: b55de0e1637b1e9f6e424b070d13577af42d7fc6
+repository-settings:
+  openstack/os-client-config: {}
