--- a/deliverables/kilo/oslo.concurrency.yaml
+++ b/deliverables/kilo/oslo.concurrency.yaml
@@ -48,3 +48,5 @@ releases:
     projects:
       - repo: openstack/oslo.concurrency
         hash: 2855b6e66256f7189c2298b2968e831480443ff2
+repository-settings:
+  openstack/oslo.concurrency: {}
