--- a/deliverables/kilo/oslo.config.yaml
+++ b/deliverables/kilo/oslo.config.yaml
@@ -40,3 +40,5 @@ releases:
     projects:
       - repo: openstack/oslo.config
         hash: 3c51838cdffe7a5057ff4823a8ab523bfacc3164
+repository-settings:
+  openstack/oslo.config: {}
