--- a/deliverables/kilo/oslo.context.yaml
+++ b/deliverables/kilo/oslo.context.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/oslo.context
         hash: 1c4757a9fb41e47867bd9b8d390057ad7636b76f
+repository-settings:
+  openstack/oslo.context: {}
