--- a/deliverables/kilo/oslo.i18n.yaml
+++ b/deliverables/kilo/oslo.i18n.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/oslo.i18n
         hash: b0faab7b3d3ea3b14053ab92dd6086956f643e15
+repository-settings:
+  openstack/oslo.i18n: {}
