--- a/deliverables/kilo/oslo.log.yaml
+++ b/deliverables/kilo/oslo.log.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/oslo.log
         hash: 54e3d0e705accfaa4c73a01fc2ea1480fcc0024e
+repository-settings:
+  openstack/oslo.log: {}
