--- a/deliverables/kilo/oslo.messaging.yaml
+++ b/deliverables/kilo/oslo.messaging.yaml
@@ -36,3 +36,5 @@ releases:
     projects:
       - repo: openstack/oslo.messaging
         hash: 0f24108058fbf15752d384be4c13e4fbac801f2a
+repository-settings:
+  openstack/oslo.messaging: {}
