--- a/deliverables/kilo/oslo.middleware.yaml
+++ b/deliverables/kilo/oslo.middleware.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/oslo.middleware
         hash: 5c3c5a92f2389dff36c2a690f0cd88d00040b3c6
+repository-settings:
+  openstack/oslo.middleware: {}
