--- a/deliverables/kilo/oslo.policy.yaml
+++ b/deliverables/kilo/oslo.policy.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/oslo.policy
         hash: 4c8f38cd1d088c46be314b47f6774e721813c6d9
+repository-settings:
+  openstack/oslo.policy: {}
