--- a/deliverables/kilo/oslo.rootwrap.yaml
+++ b/deliverables/kilo/oslo.rootwrap.yaml
@@ -16,3 +16,5 @@ releases:
     projects:
       - repo: openstack/oslo.rootwrap
         hash: f485b93f475b119e3b8fa6c9cf740207e2d2d7ac
+repository-settings:
+  openstack/oslo.rootwrap: {}
