--- a/deliverables/kilo/oslo.serialization.yaml
+++ b/deliverables/kilo/oslo.serialization.yaml
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/oslo.serialization
         hash: 7bfd5dece0f22dbdea1c3e524dbc0eca1f70f1b7
+repository-settings:
+  openstack/oslo.serialization: {}
