--- a/deliverables/kilo/oslo.utils.yaml
+++ b/deliverables/kilo/oslo.utils.yaml
@@ -32,3 +32,5 @@ releases:
     projects:
       - repo: openstack/oslo.utils
         hash: 185a7186f34660d335ba3da5bdb49914a411e747
+repository-settings:
+  openstack/oslo.utils: {}
