--- a/deliverables/kilo/oslo.versionedobjects.yaml
+++ b/deliverables/kilo/oslo.versionedobjects.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/oslo.versionedobjects
         hash: 36be0e5709f4e5fd1301e9190eb439f4e1ea2c1e
+repository-settings:
+  openstack/oslo.versionedobjects: {}
