--- a/deliverables/kilo/oslo.vmware.yaml
+++ b/deliverables/kilo/oslo.vmware.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/oslo.vmware
         hash: bd8a876482bb9d3f4df41fa4b4fe3c6cfdd4f846
+repository-settings:
+  openstack/oslo.vmware: {}
