--- a/deliverables/kilo/oslosphinx.yaml
+++ b/deliverables/kilo/oslosphinx.yaml
@@ -16,3 +16,5 @@ releases:
     projects:
       - repo: openstack/oslosphinx
         hash: e1b0dca451f2a492f5761950077eb6e721b64f60
+repository-settings:
+  openstack/oslosphinx: {}
