--- a/deliverables/kilo/oslotest.yaml
+++ b/deliverables/kilo/oslotest.yaml
@@ -32,3 +32,5 @@ releases:
     projects:
       - repo: openstack/oslotest
         hash: cb03bda527d46ee14dd1de052cf6db08d0f1425e
+repository-settings:
+  openstack/oslotest: {}
