--- a/deliverables/kilo/pycadf.yaml
+++ b/deliverables/kilo/pycadf.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/pycadf
         hash: 6f6f23b8bb2a116641b7514cb97ae1e687e28173
+repository-settings:
+  openstack/pycadf: {}
