--- a/deliverables/kilo/python-barbicanclient.yaml
+++ b/deliverables/kilo/python-barbicanclient.yaml
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/python-barbicanclient
         hash: 2919366867af335d59913764a55ca8e95569947d
+repository-settings:
+  openstack/python-barbicanclient: {}
