--- a/deliverables/kilo/python-cinderclient.yaml
+++ b/deliverables/kilo/python-cinderclient.yaml
@@ -16,3 +16,5 @@ releases:
     projects:
       - repo: openstack/python-cinderclient
         hash: ecbfb37ff80035f75c4508b152b0f0f803dfa600
+repository-settings:
+  openstack/python-cinderclient: {}
