--- a/deliverables/kilo/python-cliff.yaml
+++ b/deliverables/kilo/python-cliff.yaml
@@ -26,3 +26,5 @@ releases:
     projects:
       - repo: openstack/cliff
         hash: a280892bcedcc83a77d16bfc56d072cd2fc90230
+repository-settings:
+  openstack/cliff: {}
