--- a/deliverables/kilo/python-designateclient.yaml
+++ b/deliverables/kilo/python-designateclient.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/python-designateclient
         hash: 7363e3b4e98839aaffe20c3a5618d2ef77181304
+repository-settings:
+  openstack/python-designateclient: {}
