--- a/deliverables/kilo/python-glanceclient.yaml
+++ b/deliverables/kilo/python-glanceclient.yaml
@@ -36,3 +36,5 @@ releases:
     projects:
       - repo: openstack/python-glanceclient
         hash: 9333d0e4f2b47cf9a0dd52d71bb3a231422b84d2
+repository-settings:
+  openstack/python-glanceclient: {}
