--- a/deliverables/kilo/python-heatclient.yaml
+++ b/deliverables/kilo/python-heatclient.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/python-heatclient
         hash: 6d528f005742263837d05250662bf6214a703da8
+repository-settings:
+  openstack/python-heatclient: {}
