--- a/deliverables/kilo/python-ironicclient.yaml
+++ b/deliverables/kilo/python-ironicclient.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/python-ironicclient
         hash: 06a62bc60eef42b3dfcecbe923922f49cd17dace
+repository-settings:
+  openstack/python-ironicclient: {}
