--- a/deliverables/kilo/python-keystoneclient.yaml
+++ b/deliverables/kilo/python-keystoneclient.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/python-keystoneclient
         hash: e81856f4963d768fa286a9b2d2a40a6663810f6d
+repository-settings:
+  openstack/python-keystoneclient: {}
