--- a/deliverables/kilo/python-manilaclient.yaml
+++ b/deliverables/kilo/python-manilaclient.yaml
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/python-manilaclient
         hash: 163c34f66945dbee07d1ca21c32523466dc16088
+repository-settings:
+  openstack/python-manilaclient: {}
