--- a/deliverables/kilo/python-muranoclient.yaml
+++ b/deliverables/kilo/python-muranoclient.yaml
@@ -9,3 +9,5 @@ releases:
     projects:
       - repo: openstack/python-muranoclient
         hash: 5670a3838dfc67797c85612194f02be7ba86b5e4
+repository-settings:
+  openstack/python-muranoclient: {}
