--- a/deliverables/kilo/python-neutronclient.yaml
+++ b/deliverables/kilo/python-neutronclient.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/python-neutronclient
         hash: 2f0fc2cf093a3c089ec341e1fc8c7b89f22994ab
+repository-settings:
+  openstack/python-neutronclient: {}
