--- a/deliverables/kilo/python-openstackclient.yaml
+++ b/deliverables/kilo/python-openstackclient.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/python-openstackclient
         hash: be9b49e08491ede3ef381ade23e60fdf2a3b0040
+repository-settings:
+  openstack/python-openstackclient: {}
