--- a/deliverables/kilo/python-saharaclient.yaml
+++ b/deliverables/kilo/python-saharaclient.yaml
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/python-saharaclient
         hash: 319ceb6acf55382218dcd971367613aecb3e4afc
+repository-settings:
+  openstack/python-saharaclient: {}
