--- a/deliverables/kilo/python-stevedore.yaml
+++ b/deliverables/kilo/python-stevedore.yaml
@@ -14,3 +14,5 @@ releases:
     projects:
       - repo: openstack/stevedore
         hash: 218e95d5f09563bd14c50ee0441855f3389af7e7
+repository-settings:
+  openstack/stevedore: {}
