--- a/deliverables/kilo/python-swiftclient.yaml
+++ b/deliverables/kilo/python-swiftclient.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/python-swiftclient
         hash: c9f79e641c6906e95095f3e0e505f9bd3f715bc2
+repository-settings:
+  openstack/python-swiftclient: {}
