--- a/deliverables/kilo/python-troveclient.yaml
+++ b/deliverables/kilo/python-troveclient.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/python-troveclient
         hash: a36ebe539ce0affef5388b7edd7a6a230a0fde6c
+repository-settings:
+  openstack/python-troveclient: {}
