--- a/deliverables/kilo/sahara.yaml
+++ b/deliverables/kilo/sahara.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/sahara
         hash: f80daad635f2273103a601c7427f731f74bb41d6
+repository-settings:
+  openstack/sahara: {}
+  openstack/sahara-extra: {}
+  openstack/sahara-image-elements: {}
