--- a/deliverables/kilo/swift.yaml
+++ b/deliverables/kilo/swift.yaml
@@ -16,3 +16,5 @@ releases:
     projects:
       - repo: openstack/swift
         hash: f8dee761bd36f857aa1288c27e095907032fad68
+repository-settings:
+  openstack/swift: {}
