--- a/deliverables/kilo/taskflow.yaml
+++ b/deliverables/kilo/taskflow.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/taskflow
         hash: f734467ddc3cebca5b88c6df37fbe3743aa04ca0
+repository-settings:
+  openstack/taskflow: {}
