--- a/deliverables/kilo/trove.yaml
+++ b/deliverables/kilo/trove.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/trove
         hash: 0688578c5ee958773367d167ea960a995757e820
+repository-settings:
+  openstack/trove: {}
