--- a/deliverables/kilo/python-ceilometerclient.yaml
+++ b/deliverables/kilo/python-ceilometerclient.yaml
@@ -20,7 +20,7 @@ releases:
     projects:
       - repo: openstack/python-ceilometerclient
         hash: 2861e81ea83363d2327f8d67e12531f45883e423
-        highlights: >
+        highlights: |
           This bumps kilo version to handle bug #1494516
   - version: 1.1.2
     projects:
