Add repo settings and remove highlights for Juno
We've deprecated per-release highlights and are now removing them.
We also now require repository-settings for deliverables. This adds
the one and removes the other.

Change-Id: I7fb0ad93a12c7da89c9f6af70b03b347e1331242

--- a/deliverables/juno/heat.yaml
+++ b/deliverables/juno/heat.yaml
@@ -8,19 +8,21 @@ releases:
     projects:
       - repo: openstack/heat
         hash: c06772571a81383aa37336a78d72d455067b75e8
-  - version: "2014.2.1"
+  - version: 2014.2.1
     projects:
       - repo: openstack/heat
         hash: f2c73c650b16f26eece1841552e0c276b9d954df
-  - version: "2014.2.2"
+  - version: 2014.2.2
     projects:
       - repo: openstack/heat
         hash: b52c916da0759fb5b310ecbcce5db2608b67fdb1
-  - version: "2014.2.3"
+  - version: 2014.2.3
     projects:
       - repo: openstack/heat
         hash: fc4c82996a7a694c6f8802226033d5f1920654cd
-  - version: "2014.2.4"
+  - version: 2014.2.4
     projects:
       - repo: openstack/heat
         hash: 79147fc305f7955f330ad5494eb3e98b9b6ecc9e
+repository-settings:
+  openstack/heat: {}
