--- a/deliverables/juno/horizon.yaml
+++ b/deliverables/juno/horizon.yaml
@@ -8,19 +8,21 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: ce839aa58d32a9bd475c099f371d0e820d51f1a3
-  - version: "2014.2.1"
+  - version: 2014.2.1
     projects:
       - repo: openstack/horizon
         hash: 3d9a31e2a05288e9a48a51eb4fe693c42e92aac7
-  - version: "2014.2.2"
+  - version: 2014.2.2
     projects:
       - repo: openstack/horizon
         hash: 889f9d9000f5e0512453e15de66aa08a845b451f
-  - version: "2014.2.3"
+  - version: 2014.2.3
     projects:
       - repo: openstack/horizon
         hash: b37c1f3565e89a7fe3fef5ce76e9c26b22e3e7c4
-  - version: "2014.2.4"
+  - version: 2014.2.4
     projects:
       - repo: openstack/horizon
         hash: 25bf3ba84362702632fa56c423818189fe847ac8
+repository-settings:
+  openstack/horizon: {}
