--- a/deliverables/juno/neutron.yaml
+++ b/deliverables/juno/neutron.yaml
@@ -8,19 +8,21 @@ releases:
     projects:
       - repo: openstack/neutron
         hash: 0d0c376d09d85a0eabeb8c9258349d1e63a5cdf0
-  - version: "2014.2.1"
+  - version: 2014.2.1
     projects:
       - repo: openstack/neutron
         hash: dfa4b4b9b6b19a627cfb5eb5c6ab9db4961a06ea
-  - version: "2014.2.2"
+  - version: 2014.2.2
     projects:
       - repo: openstack/neutron
         hash: dd715d9bb9e06d4e12e2c20b8e6f947748d67a1a
-  - version: "2014.2.3"
+  - version: 2014.2.3
     projects:
       - repo: openstack/neutron
         hash: 96b5962646510ee67b322aa82242e02e3edfaa83
-  - version: "2014.2.4"
+  - version: 2014.2.4
     projects:
       - repo: openstack/neutron
         hash: b6d966d415ed254ee5bd7419f5761faee90b3702
+repository-settings:
+  openstack/neutron: {}
