--- a/deliverables/juno/nova.yaml
+++ b/deliverables/juno/nova.yaml
@@ -8,19 +8,21 @@ releases:
     projects:
       - repo: openstack/nova
         hash: c5ac21f3dbb4ad59efcb631d91e4e64f77fba43f
-  - version: "2014.2.1"
+  - version: 2014.2.1
     projects:
       - repo: openstack/nova
         hash: ba25e9ea6d0d42dd3b78cc6440710fd9362ae1b5
-  - version: "2014.2.2"
+  - version: 2014.2.2
     projects:
       - repo: openstack/nova
         hash: 78dbed87b53ad3e60dc00f6c077a23506d228b6c
-  - version: "2014.2.3"
+  - version: 2014.2.3
     projects:
       - repo: openstack/nova
         hash: e6452b995023e89bf6f1a1fb14f39216f83c760b
-  - version: "2014.2.4"
+  - version: 2014.2.4
     projects:
       - repo: openstack/nova
         hash: 044154de11ddd0d250e3486718843642ddaf579a
+repository-settings:
+  openstack/nova: {}
