--- a/deliverables/juno/openstack-doc-tools.yaml
+++ b/deliverables/juno/openstack-doc-tools.yaml
@@ -27,7 +27,7 @@ releases:
     projects:
       - repo: openstack/openstack-doc-tools
         hash: ca4b24b3960f79741fb011c78d67cf88e0559ee0
-  - version: "0.16.1"
+  - version: 0.16.1
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 4a4da3e263c8b040249ffdd76e5285c3e8429557
@@ -39,7 +39,7 @@ releases:
     projects:
       - repo: openstack/openstack-doc-tools
         hash: f8d8886cc08f485c06869f5fdf7788a510fc8f17
-  - version: "0.18.1"
+  - version: 0.18.1
     projects:
       - repo: openstack/openstack-doc-tools
         hash: edb4ff499811f1c23de136025f96cc032037474f
@@ -51,3 +51,5 @@ releases:
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 4906d5018d19439c99f304724f1c06ddfa1d0f7d
+repository-settings:
+  openstack/openstack-doc-tools: {}
