--- a/deliverables/juno/python-manilaclient.yaml
+++ b/deliverables/juno/python-manilaclient.yaml
@@ -4,11 +4,13 @@ team: manila
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: "1.0.0"
+  - version: 1.0.0
     projects:
       - repo: openstack/python-manilaclient
         hash: fc2cd23a7d5a2beb94bc1043f7db0936b28bb563
-  - version: "1.0.1"
+  - version: 1.0.1
     projects:
       - repo: openstack/python-manilaclient
         hash: 3b7ff6b2b2b7dfc77ceea88443227613f82d2365
+repository-settings:
+  openstack/python-manilaclient: {}
