--- a/deliverables/juno/python-stevedore.yaml
+++ b/deliverables/juno/python-stevedore.yaml
@@ -2,7 +2,9 @@
 launchpad: python-stevedore
 team: oslo
 releases:
-  - version: "1.0.0"
+  - version: 1.0.0
     projects:
       - repo: openstack/stevedore
         hash: 860bd8f8ecba38fdfda5b41a3a1dbe854d6528e2
+repository-settings:
+  openstack/stevedore: {}
