--- a/deliverables/juno/taskflow.yaml
+++ b/deliverables/juno/taskflow.yaml
@@ -8,27 +8,29 @@ releases:
     projects:
       - repo: openstack/taskflow
         hash: c8a281aa360117a03baecb38bde411a990b50551
-  - version: "0.3.21"
+  - version: 0.3.21
     projects:
       - repo: openstack/taskflow
         hash: 3192d8de72ad4e46712b8e707750d4c1325017a3
-  - version: "0.4.0"
+  - version: 0.4.0
     projects:
       - repo: openstack/taskflow
         hash: 4529eb7222ee5a5e5e654306ba6c2230f21d548b
-  - version: "0.5.0"
+  - version: 0.5.0
     projects:
       - repo: openstack/taskflow
         hash: 1caaecc5d6b2aa4cde4a50e31d1d993fce7a66c4
-  - version: "0.6.0"
+  - version: 0.6.0
     projects:
       - repo: openstack/taskflow
         hash: ba62a9c7be999f49d89af6c5e0636f6f89bbdd13
-  - version: "0.6.1"
+  - version: 0.6.1
     projects:
       - repo: openstack/taskflow
         hash: 69449ae301fd411722021b47197d0a7eda335cf7
-  - version: "0.6.2"
+  - version: 0.6.2
     projects:
       - repo: openstack/taskflow
         hash: 66c9ae4521f3abacd3df1403e40b639bb2d58679
+repository-settings:
+  openstack/taskflow: {}
