--- a/deliverables/juno/trove.yaml
+++ b/deliverables/juno/trove.yaml
@@ -8,15 +8,17 @@ releases:
     projects:
       - repo: openstack/trove
         hash: a4c38cc6ddbfba2301766eced939229cccc31953
-  - version: "2014.2.2"
+  - version: 2014.2.2
     projects:
       - repo: openstack/trove
         hash: 248714492929e673178c30d1115d60ceefebdca2
-  - version: "2014.2.3"
+  - version: 2014.2.3
     projects:
       - repo: openstack/trove
         hash: 7db2ae9eadeb2943c0e4f076a95b60190c4437aa
-  - version: "2014.2.4"
+  - version: 2014.2.4
     projects:
       - repo: openstack/trove
         hash: 68ae364cd0f1e169d10cc3cca4e42d7a6ee63623
+repository-settings:
+  openstack/trove: {}
