--- a/deliverables/juno/keystonemiddleware.yaml
+++ b/deliverables/juno/keystonemiddleware.yaml
@@ -4,7 +4,9 @@ team: keystone
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: "1.3.2"
+  - version: 1.3.2
     projects:
       - repo: openstack/keystonemiddleware
         hash: 4c7366a46164e97663d925568ea74dc3026df471
+repository-settings:
+  openstack/keystonemiddleware: {}
