--- a/deliverables/juno/sahara.yaml
+++ b/deliverables/juno/sahara.yaml
@@ -12,19 +12,23 @@ releases:
         hash: 6706e1998f9c7b60091f92bbc1f1c1d5e5e0f5f1
       - repo: openstack/sahara-image-elements
         hash: 51c33744acf87bbedc68fecf7f44d96e15bf90bd
-  - version: "2014.2.1"
+  - version: 2014.2.1
     projects:
       - repo: openstack/sahara
         hash: 2b5f1e6b528b8676e83114cb1db723fc893ffb0f
-  - version: "2014.2.2"
+  - version: 2014.2.2
     projects:
       - repo: openstack/sahara
         hash: 945fa72ed01ecabf5a260a676c9d98e8377b45af
-  - version: "2014.2.3"
+  - version: 2014.2.3
     projects:
       - repo: openstack/sahara
         hash: 0d7e25d48a233e44a18244258294c1ab89f7019b
-  - version: "2014.2.4"
+  - version: 2014.2.4
     projects:
       - repo: openstack/sahara
         hash: bf4edbad4128ed238b929eed7471a06770c3da93
+repository-settings:
+  openstack/sahara: {}
+  openstack/sahara-extra: {}
+  openstack/sahara-image-elements: {}
